@@ -1,0 +1,1 @@
+#idP {color: black !important}
